--- a/static/index.html
+++ b/static/index.html
@@ -4,4 +4,4 @@
   <img border="0" src="http://jenkins-x.io/images/logo.png" width="300" height="300"/>
 </a>
 
-<h1>Hi from Jenkins X!</h1>
+<h1>Hello from Jenkins X!</h1>
